# Fatterbox

./: .gitignore  Dockerfile  README.md  cpu_requirements.txt  cuda_requirements.txt  docker_init.py  main.py  pyproject.toml  run_server_with_python_stream.bat  wingman_chatterbox_openai_server_stream.py
chatterbox/: pyproject.toml
fatterbox/: __init__.py  __main__.py  handler.py  main.py  model.py  openapi.py  utils.py  voices.py
src/: audio_processor.py  config.py  main.py  model_manager.py  openapi_server.py  voice_loader.py  wyoming_server.py
