[project]
name = "chatterbox-streaming-openai"
version = "0.1.4"
description = "Chatterbox: Open Source TTS and Voice Conversion by Resemble AI"
requires-python = ">=3.11"
dependencies = [
  "torch>=2.7.1",
  "torchaudio>=2.7.1",
  "flask",
  "numpy",
  "librosa==0.11.0",
  "s3tokenizer",
  "transformers==4.46.3",
  "diffusers==0.29.0",
  "resemble-perth==1.0.1",
  "conformer==0.3.2",
  "safetensors",
  "pysbd",
  "pykakasi==2.3.0",
  "tts-webui-chatterbox-tts",
  "setuptools>=80.9.0",
  "torchcodec>=0.8.1",
  "wyoming>=1.8.0",
]

[tool.uv]
extra-index-urls = ["https://download.pytorch.org/whl/cu128"]

[tool.uv.sources]
tts-webui-chatterbox-tts = { git = "https://github.com/rsxdalv/chatterbox.git", rev = "faster" }
