[project]
name = "fatterbox"
version = "1.0.0"
description = "fatterbox"
requires-python = "==3.11.*"
dependencies = [
    # EXPORT HF_TOKEN="none"
    "tts-webui-chatterbox-tts @ git+https://github.com/rsxdalv/chatterbox.git@faster",
    "wyoming",
    "torch",
    "torchaudio",
    "perth",
    "flash-attn @ https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.5.4/flash_attn-2.8.3+cu124torch2.6-cp311-cp311-linux_x86_64.whl"
]
